# Tourobo2025_game_management_ws

./: .clang-format  .gitignore  LICENSE  README.md  test_confirm.sh  test_immigration.sh  test_load_next.sh  test_referee_call.sh  test_seedlings.sh  test_start_match.sh  test_type1_a.sh  test_type1_b.sh  test_type2.sh  test_v_goal.sh  yamapan.toml
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: bringup_launch.yaml
src/cpp_httplib_vendor/: CMakeLists.txt  package.xml
src/game_state_interfaces/: CMakeLists.txt  package.xml
src/game_state_interfaces/msg/: Match.msg  Team.msg
src/game_state_interfaces/srv/: EndMatch.srv  UpdateScore.srv
src/led_manager/: package.xml  setup.cfg  setup.py
src/led_manager/led_manager/: led_manager.py
src/state_manager/: CMakeLists.txt  package.xml
src/state_manager/include/state_manager/: state_manager_component.hpp
src/state_manager/src/: state_manager_component.cpp
